disable ext.dirs on Linux export and set jna.nosys as well